import("//build/templates/rust.gni")
import("//kernel/common_crate_rustflags.gni")
import("//kernel/librs/tests/posixtestsuite/testcase.gni")
group("run_librs_posix_testsuite") {
  testonly = true
  deps = [
    ":run_librs_posix_pthread_create_1_1",
    ":run_librs_posix_pthread_spin_lock_1_2",
    ":run_librs_posix_sem_destroy_3_1",
  ]
}

build_rust("librs_for_posix_testsuite") {
  testonly = true
  crate_type = "staticlib"
  crate_name = "librs"
  sources = [ "//kernel/librs/src/lib.rs" ]
  deps = [
    "//external/spin/v0.9.8:spin",
    "//kernel/header:bluekernel_header",
    "//kernel/kernel:bluekernel_posixtestsuite",
    "//kernel/scal:bluekernel_scal_posixtestsuite",
    "//libc:libc",
  ]
  features = [ "posixtestsuite" ]
  rustflags = common_crate_rustflags
}

posix_testsuite_case("pthread_create_1_1") {
}
posix_testsuite_case("sem_destroy_3_1") {
}
posix_testsuite_case("pthread_spin_lock_1_2") {
}
